Bone Envelope Head Radius property missing from Properties->Transform panel (Also, it's redundant) #65670

Closed
opened 2019-06-09 22:16:01 +02:00 by Demeter Dzadik · 8 comments
Member

Blender Version
Broken: 2.80, 81b68f7279

This problem can be interpreted in a few ways.

1: Envelope Head Radius is missing from the Transform panel. Surely it's supposed to be here, right above Envelope Tail Radius:

2WgkQXX.png

  1. It feels like Envelope Deform Distance doesn't belong in the Transform panel to begin with. Maybe it was accidently put there instead of Envelope Head Radius. But if this is the case, they're in the unintuitive order, with Tail coming first.

3: Both of the mentioned properties in the Transform panel are completely redundant. Copies of the same exact properties can be found by scrolling down a bit, under the Deform panel:

YPbDIW0.png

I know asking for things to be removed is not really a valid bug report. But I think redundant buttons that seem to have been put there by accident are a bug. So I subscribe to #3 interpretation and think the two properties should be removed from the Transform panel.

**Blender Version** Broken: 2.80, 81b68f7279cd This problem can be interpreted in a few ways. 1: Envelope Head Radius is missing from the Transform panel. Surely it's supposed to be here, right above Envelope Tail Radius: ![2WgkQXX.png](https://archive.blender.org/developer/F7096560/2WgkQXX.png) 2. It feels like Envelope Deform Distance doesn't belong in the Transform panel to begin with. Maybe it was accidently put there instead of Envelope Head Radius. But if this is the case, they're in the unintuitive order, with Tail coming first. 3: Both of the mentioned properties in the Transform panel are completely redundant. Copies of the same exact properties can be found by scrolling down a bit, under the Deform panel: ![YPbDIW0.png](https://archive.blender.org/developer/F7096565/YPbDIW0.png) I know asking for things to be removed is not really a valid bug report. But I think redundant buttons that seem to have been put there by accident are a bug. So I subscribe to #3 interpretation and think the two properties should be removed from the Transform panel.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Author
Member

Putting this in a comment because it's more of a feature request:

Put BBone scale in the Transform panel instead of the two redundant properties mentioned above. Bone.bbone_x and Bone.bbone_y. These values are invisible to the user, even though they can be changed with the Ctrl+Shift+S shortcut, which doesn't even let you change the two axes separately. They would be a perfect fit!

Putting this in a comment because it's more of a feature request: Put BBone scale in the Transform panel instead of the two redundant properties mentioned above. Bone.bbone_x and Bone.bbone_y. These values are invisible to the user, even though they can be changed with the Ctrl+Shift+S shortcut, which doesn't even let you change the two axes separately. They would be a perfect fit!

Added subscribers: @WilliamReynish, @ZedDB

Added subscribers: @WilliamReynish, @ZedDB
William Reynish was assigned by Sebastian Parborg 2019-06-17 12:27:26 +02:00

@WilliamReynish what do you think? (Since this seem to an UI issue).

@WilliamReynish what do you think? (Since this seem to an UI issue).

Added subscriber: @JasonvanGumster

Added subscriber: @JasonvanGumster

I noticed this UI bug as well just yesterday. The radius values should probably be removed from the Transform panel in Bone Properties. Also, when in Pose mode, the order of properties in the 3D Viewport's Transform panel is inconsistent with the Bone Properties one as well. The Rotation Mode drop-down should probably be bumped above Scale in Bone Properties so it better matches the 3D Viewport's sidebar.

And I'd suggest that this be fixed prior to the 2.80 release. :)

I noticed this UI bug as well just yesterday. The radius values should probably be removed from the Transform panel in Bone Properties. Also, when in Pose mode, the order of properties in the 3D Viewport's Transform panel is inconsistent with the Bone Properties one as well. The Rotation Mode drop-down should probably be bumped above Scale in Bone Properties so it better matches the 3D Viewport's sidebar. And I'd suggest that this be fixed prior to the 2.80 release. :)

This issue was referenced by 918150a0b9

This issue was referenced by 918150a0b96deec4a413d5689383ee43d7ff4df9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65670
No description provided.